2013-06-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw3d_graphbox):  "set [xy]label rotate parallel"
	is affected by the direction of the complementary axis.
	Bug #1252

2013-06-29  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/axis.h src/axis.c src/graphics.c src/graph3d.c src/color.c 
	doc/gnuplot.doc:
	Allow minor tic levels 2 or higher to have labels. 

2013-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (load_file): Expand macros up to 3 levels deep when 
	stepping through a "load" operation.  This matches the depth allowed
	for use at the top level command line.
	Bug #1246

2013-06-28  Christoph Bersch <usenet@bersch.net>

	* src/gadgets.c(clip_polygon): Use a temporary copy of the input 
	vertices rather than overwriting them during clipping.
	Bug #1255

2013-06-28  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotScene.cpp:  Fixed the text transformation
	origin.

2013-06-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/hidden3d.c src/hidden3d.h demo/contours.dem:
	Apply hidden3d processing to contour labels.

	* src/datafile.h src/fit.c src/show.c demo/fitmulti.dem
	docs/gnuplot.doc:  Increase the number of independent parameters
	(dimensions) handled by "fit" from 5 to MAX_NUM_VAR, which is currently
	12.  MAXDATACOLS is correspondingly increased to MAX_NUM_VAR+2 = 14.
	NB: Only the first 2 dimensions, "x" and "y" by default, use the axis
	structures.  So calling 'set xrange' or 'set yrange' can affect the
	fit by limiting the range of coordinates that are accepted, just as
	with previous versions.  However, there is no connection between
	independent parameters 3, 4, ... and any axis ranges or structures.
	Therefore time data can be given for the first and second dimensions
	but not for any additional dimensions.

2013-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Bug fix for contour line colors. If the base linetypes