@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.806 2013/06/27 20:03:41 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.807 2013/06/29 12:04:44 juhaszp Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -11551,23 +11551,21 @@ Ffigure_missing
 ?unset tics
 ?show tics
 ?tics
- Control of the major (labeled) tics on all axes at once is possible with the
+ Control of the labeled tics on all axes at once is possible with the
  `set tics` command.
 
- Fine control of the major (labeled) tics on all axes at once is possible
- with the `set tics` command.  The tics may be turned off with the `unset tics`
- command, and may be turned on (the default state) with `set tics`.  Similar
- commands (by preceding 'tics' by the axis name) control the major tics on a
- single axis.
+ The tics may be turned off with the `unset tics` command, and may be turned on
+ (the default state) with `set tics`.  Fine control of tics on individual axes
+ is possible using the alternative commands `set xtics`, `setztics`, etc.
 
  Syntax:
        set tics {axis | border} {{no}mirror}
-                {in | out} {scale {default | <major> {,<minor>}}}
+                {in | out} {front | back}
                 {{no}rotate {by <ang>}} {offset <offset> | nooffset}
                 {left | right | center | autojustify}
                 { format "formatstring" } { font "name{,<size>}" }
                 { textcolor <colorspec> }
-       set tics {front | back}
+       set tics scale {default | <major> {,<minor>}}
        unset tics
        show tics
 
@@ -11591,9 +11589,12 @@ Ffigure_missing
 
  `in` and `out` change the tic marks to be drawn inwards or outwards.
 
- With `scale`, the size of the tic marks can be adjusted. If <minor> is not
- specified, it is 0.5*<major>.  The default size 1.0 for major tics and 0.5
- for minor tics is requested by `scale default`.
+ `set tics scale` controls the size of the tic marks.  The first value <major>
+ controls the auto-generated or user-specified major tics (level 0).  The
+ second value controls the auto-generated or user-specified minor tics
+ (level 1).  <major> defaults to 1.0, <minor> defaults to <major>/2.
+ Additional values control the size of user-specified tics with level 2, 3, ...
+ Default tic sizes are restored by `set tics scale default`.
 
  `rotate` asks `gnuplot` to rotate the text through 90 degrees, which will be
  done if the terminal driver in use supports text rotation.  `norotate`
@@ -12435,14 +12436,14 @@ Ffigure_missing
  See `set format` for more information.  If no string is given, the
  default label (numerical) is used.
 
- An explicit tic mark has a third parameter, the "level".  The default
- is level 0, a major tic.  A level of 1 or higher generates a minor tic.
- If the level is specified, then the label must also be supplied.
+ An explicit tic mark has a third parameter, the level.
+ The default is level 0, a major tic.  Level 1 generates a minor tic.
+ Labels are never printed for minor tics.  Major and minor tics may be
+ auto-generated by the program or specified explicitly by the user.
+ Tics with level 2 and higher must be explicitly specified by the user, and
+ take priority over auto-generated tics.  The size of tics marks at each
+ level is controlled by the command `set tics scale`.
  
- For compatibility reasons, minor tics with level 1 can't have labels.
- Any label specified to level 1 tics is ignored.
- Level 2 or higher generates a minor tic that can have a label.
-
  Examples:
        set xtics ("low" 0, "medium" 50, "high" 100)
        set xtics (1,2,4,8,16,32,64,128,256,512,1024)
