@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: axis.c,v 1.115 2013/05/23 01:08:32 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: axis.c,v 1.116 2013/06/29 12:04:44 juhaszp Exp $"); }
 #endif
 
 /* GNUPLOT - axis.c */
@@ -126,6 +126,9 @@ volatile double vol_this_tic;
 volatile double vol_previous_tic;
 
 const struct ticdef default_axis_ticdef = DEFAULT_AXIS_TICDEF;
+
+/* Tic scale for tics with level > 1.  0 means 'inherit minitics scale'  */
+double ticscale[MAX_TICLEVEL] = {1,0.5,1,1,1};
 
 /* axis labels */
 const text_label default_axis_label = EMPTY_LABELSTRUCT;
@@ -1882,7 +1885,6 @@ add_tic_user(AXIS_INDEX axis, char *label, double position, int level)
 	/* Make a new ticmark */
 	newtic = (struct ticmark *) gp_alloc(sizeof(struct ticmark), (char *) NULL);
 	newtic->position = position;
-	newtic->level = level;
 	/* Insert it in the list */
 	newtic->next = tic->next;
 	tic->next = newtic;
@@ -1892,6 +1894,12 @@ add_tic_user(AXIS_INDEX axis, char *label, double position, int level)
 	    int_warn(NO_CARET,"add_tic_user: list sort error");
 	newtic = tic->next;
 	/* Don't over-write a major tic with a minor tic */
+	if (level == 1)
+	    return;
+	/* User-specified tics are preferred to autogenerated tics. */
+	if (level == 0 && newtic->level > 1)
+	    return;
+	/* FIXME: But are they preferred to data-generated tics?    */
 	if (newtic->level < level)
 	    return;
 	if (newtic->label) {
@@ -1899,6 +1907,7 @@ add_tic_user(AXIS_INDEX axis, char *label, double position, int level)
 	    newtic->label = NULL;
 	}
     }
+    newtic->level = level;
 
     if (label)
 	newtic->label = gp_strdup(label);
