@@ -1,3 +1,9 @@
+2013-06-30  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/axis.c src/axis.h src/set.c src/unset.c src/show.c src/save.c
+	docs/gnuplot.doc:  Extend "set tics scale" to control the size of tics
+	at levels 2 and above.
+
 2013-06-29  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graph3d.c (draw3d_graphbox):  "set [xy]label rotate parallel"
